Cred offer qr code (#27)
* fix test init

* test fix, walt image replacement

* wait till template is read

* send null values for overriding, add claims to test

* typo

* remove useless mount

* ignore keycloak 22

* a

* action parameters

* action paramter split

* exclude for all cases

* Typefix

* Updated credential offer endpoint logic

* Added error handling

* Updated credential endpoint parameter

* Removed unused fields and methods

* Cleaned JS code

* Updated readme and api description

* Updated gitignore

* Updated integration test

* Updated log message output

* Updated log message output

* Updated comment text

---------
